--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "version": "1.0.1",
     "devDependencies": {
         "@chainlink/contracts": "^0.4.1",
+        "@nomicfoundation/hardhat-chai-matchers": "^1.0.1",
         "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
         "@nomiclabs/hardhat-etherscan": "^3.0.0",
-        "@nomiclabs/hardhat-waffle": "^2.0.0",
         "chai": "^4.2.0",
         "dotenv": "^16.0.0",
-        "ethereum-waffle": "^3.0.0",
         "ethers": "^5.6.9",
         "hardhat": "^2.9.9",
         "hardhat-deploy": "^0.11.11",
@@ -26,5 +25,8 @@
         "lint:fix": "yarn solhint 'contracts/*.sol' --fix",
         "format": "yarn prettier --write .",
         "coverage": "yarn hardhat coverage"
+    },
+    "dependencies": {
+        "git": "^0.1.5"
     }
 }
